# hello_llm_translate

./: README.md  main.py  pyproject.toml  requirements.txt
Helsinki-NLP/opus-mt-en-de/: main.py
deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B/: main.py
deepseek-ai/chat/: main.py
