[project]
name = "hello-llm-translate"
version = "0.1.0"
description = ""
authors = [
    {name = "Myridia"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets (>=4.8.5,<5.0.0)",
    "transformers (>=5.9.0,<6.0.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "huggingface-hub (>=1.15.0,<2.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (>=7.35.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false